--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -80,6 +80,20 @@
             app:iconTintMode="src_atop"
             tools:ignore="DuplicateIds" />
 
+        <ImageView
+            android:id="@+id/eye"
+
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="279dp"
+            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="276dp"
+            android:src="@drawable/invisible" />
+
     </RelativeLayout>
 
     <TextView
@@ -188,9 +202,10 @@
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="290dp"
+        android:layout_width="250dp"
         android:layout_height="48dp"
         android:layout_marginTop="14dp"
+        android:layout_marginRight="40dp"
         android:autofillHints=""
         android:fontFamily="@font/quicksand_medium"
         android:hint="Password"
