--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -20,6 +20,18 @@
         app:layout_constraintStart_toStartOf="parent"
         >
 
+
+        <ImageView
+            android:id="@+id/eye"
+
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_alignParentStart="false"
+            android:layout_alignParentEnd="false"
+            android:layout_alignParentBottom="false"
+            android:layout_marginTop="295dp"
+            android:layout_marginLeft="26dp"
+            android:src="@drawable/invisible" />
     </LinearLayout>
 
     <TextView
