--- a/app/src/main/res/layout/activity_payments.xml
+++ b/app/src/main/res/layout/activity_payments.xml
@@ -15,6 +15,7 @@
         android:layout_marginTop="50dp"
         app:flipDuration="400"
         app:flipEnabled="true"
+        app:flipOnTouch="false"
         app:flipFrom="front"
         app:flipType="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -22,7 +23,8 @@
         app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.255">
+        app:layout_constraintVertical_bias="0.255"
+        tools:ignore="MissingClass">
 
         <!-- Back Layout Goes Here -->
         <include layout="@layout/cardback"/>
