Changes in explore prices ~Ak

--- a/app/src/main/res/layout/nested_item.xml
+++ b/app/src/main/res/layout/nested_item.xml
@@ -12,7 +12,9 @@
         android:id="@+id/nestedItemTv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
+        android:layout_gravity="left"
+        android:layout_marginLeft="9dp"
+        android:layout_marginTop="19dp"
         android:text="Grocery and Stationary"
         android:textColor="@color/blue"
         android:textSize="16sp"
