--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -21,6 +21,7 @@
             android:layout_marginTop="20dp"
             android:layout_marginEnd="100dp"
             android:padding="14dp"
+            android:id="@+id/backButton"
             android:src="@drawable/back_btn"
             app:tint="@color/blue_nu" />
 
