--- a/app/src/main/res/layout/activity_addexp.xml
+++ b/app/src/main/res/layout/activity_addexp.xml
@@ -10,8 +10,8 @@
 
     <RelativeLayout
         android:id="@+id/linearLayout"
-        android:layout_width="371dp"
-        android:layout_height="389dp"
+        android:layout_width="369dp"
+        android:layout_height="437dp"
         android:layout_marginBottom="64dp"
         android:background="@drawable/shape_login_panel"
         android:orientation="horizontal"
@@ -19,8 +19,30 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintVertical_bias="0.289">
+        app:layout_constraintVertical_bias="0.211">
 
+
+        <ImageView
+            android:id="@+id/calendar"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="162dp"
+            app:srcCompat="@drawable/calendar_regular"
+            />
+
+        <TextView
+            android:id="@+id/date"
+            android:textColorHint="@color/dark_blue"
+            android:layout_width="250dp"
+            android:layout_height="48dp"
+            android:textAllCaps="false"
+            android:textSize="14dp"
+            android:fontFamily="@font/quicksand_medium"
+            android:layout_marginLeft="95dp"
+            android:layout_marginTop="162dp"
+
+            android:text="Dec 3 2022" />
     </RelativeLayout>
 
     <TextView
@@ -72,6 +94,7 @@
         android:layout_width="166dp"
         android:layout_height="53dp"
         android:layout_marginBottom="90dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/rounded_corner"
         android:backgroundTint="@color/warm_white"
         android:fontFamily="@font/quicksand_semibold"
@@ -105,6 +128,7 @@
         android:layout_height="48dp"
         android:layout_marginTop="14dp"
         android:autofillHints=""
+        android:text=""
         android:fontFamily="@font/quicksand_medium"
         android:hint="0.00"
         android:inputType="numberDecimal"
@@ -118,7 +142,7 @@
         android:id="@+id/text"
         android:layout_width="247dp"
         android:layout_height="133dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginTop="84dp"
         android:fontFamily="@font/quicksand_medium"
         android:gravity="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
@@ -132,6 +156,7 @@
         android:id="@+id/contact"
         android:layout_width="144dp"
         android:layout_height="43dp"
+        android:layout_marginTop="20dp"
         android:layout_marginBottom="40dp"
         android:background="@drawable/rounded_corner"
         android:backgroundTint="@color/dark_blue"
