--- a/app/src/main/res/layout/expense_item.xml
+++ b/app/src/main/res/layout/expense_item.xml
@@ -28,13 +28,13 @@
         <TextView
             android:id="@+id/date"
             android:layout_width="48dp"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_margin="8dp"
             android:layout_marginTop="0dp"
             android:fontFamily="@font/quicksand_semibold"
             android:gravity="center"
             android:text="Dec 3"
-            android:textSize="19dp"
+            android:textSize="20dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@+id/expense"
             app:layout_constraintStart_toStartOf="parent"
