--- a/app/src/main/res/drawable/white_background.xml
+++ b/app/src/main/res/drawable/white_background.xml
@@ -3,7 +3,7 @@
 <item>
     <shape android:shape="rectangle">
         <corners android:radius="18sp"/>
-        <solid android:color="#ffffff"/>
+        <solid android:color="@color/white"/>
     </shape>
 </item>
 </selector>
