--- a/app/src/main/res/layout/activity_changepassword.xml
+++ b/app/src/main/res/layout/activity_changepassword.xml
@@ -3,148 +3,141 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/green_nu">
 
 
     <ImageView
         android:id="@+id/imageView"
-        android:layout_width="241dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="4dp"
-        android:layout_marginBottom="422dp"
-        app:layout_constraintBottom_toTopOf="@+id/passchange"
+        android:layout_width="80dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="40dp"
+        app:tint="@color/blue_nu"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_baseline_lock_24" />
 
     <TextView
-        android:id="@+id/changePassword"
-        android:layout_width="337dp"
-        android:layout_height="72dp"
-        android:layout_marginTop="136dp"
-        android:fontFamily="@font/quicksand_bold"
-        android:gravity="center"
-        android:text="Change Password"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textColor="@color/secondary"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-    <TextView
         android:id="@+id/textView"
-        android:layout_width="337dp"
-        android:layout_height="72dp"
-        android:layout_marginTop="136dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:fontFamily="@font/quicksand_bold"
         android:gravity="center"
         android:text="Change Password"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textColor="@color/secondary"
+        android:textColor="@color/blue_nu"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
     <RelativeLayout
         android:id="@+id/linearLayout"
         android:layout_width="320dp"
-        android:layout_height="321dp"
-        android:layout_marginBottom="204dp"
+        android:layout_height="370dp"
+
         android:background="@drawable/white_background"
-        android:orientation="horizontal"
+        android:layout_marginBottom="160dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.593"
-        app:layout_constraintStart_toStartOf="parent">
-
-
-        <EditText
-            android:id="@+id/old_pass"
-            android:layout_width="290dp"
-            android:layout_height="48dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="25dp"
-            android:layout_marginEnd="18dp"
-            android:autofillHints=""
-            android:fontFamily="@font/quicksand_medium"
-            android:hint="Enter old password"
-            android:inputType="textPassword"
-            android:textColorHint="@color/colorTextSecondary"
-            android:textSize="14dp" />
-
-        <EditText
-            android:id="@+id/new_pass"
-            android:layout_width="290dp"
-            android:layout_height="48dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="93dp"
-            android:layout_marginEnd="22dp"
-            android:autofillHints=""
-            android:fontFamily="@font/quicksand_medium"
-            android:hint="Enter new password"
-            android:inputType="textPassword"
-            android:textColorHint="@color/primary_green"
-            android:textSize="14dp" />
-
-        <EditText
-            android:id="@+id/confirmed_new_pass"
-            android:layout_width="290dp"
-            android:layout_height="48dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="18dp"
-            android:layout_marginTop="168dp"
-            android:layout_marginEnd="20dp"
-            android:autofillHints=""
-            android:fontFamily="@font/quicksand_medium"
-            android:hint="Enter new password again"
-            android:inputType="textPassword"
-            android:textColorHint="@color/primary_green"
-            android:textSize="14dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        >
 
 
     </RelativeLayout>
 
+    <EditText
+        android:id="@+id/old_pass"
+        android:layout_width="290dp"
+        android:layout_height="48dp"
+        android:layout_above="@+id/new_pass"
+        android:backgroundTint="@color/blue_li"
+        android:layout_marginTop="30dp"
+        android:autofillHints=""
+        android:fontFamily="@font/quicksand_semibold"
+        android:hint="Enter old password"
+        android:inputType="textPassword"
+        android:textColorHint="@color/blue_li"
+        android:textSize="14dp"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout"
+        app:layout_constraintTop_toTopOf="@+id/linearLayout"
+        />
+
+    <EditText
+        android:id="@+id/new_pass"
+        android:layout_width="290dp"
+        android:layout_height="48dp"
+        android:backgroundTint="@color/blue_li"
+        android:layout_above="@+id/confirmed_new_pass"
+        android:autofillHints=""
+        android:layout_marginTop="14dp"
+        android:fontFamily="@font/quicksand_semibold"
+
+        android:hint="Enter new password"
+        android:inputType="textPassword"
+        android:textColorHint="@color/blue_li"
+        android:textSize="14dp"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout"
+        app:layout_constraintTop_toBottomOf="@+id/old_pass" />
+    <EditText
+        android:id="@+id/confirmed_new_pass"
+        android:layout_width="290dp"
+        android:layout_height="48dp"
+        android:layout_above="@+id/passchange"
+        android:autofillHints=""
+        android:layout_marginTop="14dp"
+        android:fontFamily="@font/quicksand_semibold"
+        android:backgroundTint="@color/blue_li"
+        android:hint="Enter new password again"
+        android:inputType="textPassword"
+        android:textColorHint="@color/blue_li"
+        android:textSize="14dp"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout"
+        app:layout_constraintTop_toBottomOf="@+id/new_pass"  />
 
     <Button
         android:id="@+id/passchange"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="35dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingRight="40dp"
+        android:paddingLeft="40dp"
+        android:layout_above="@+id/cancel"
         android:background="@drawable/blue_background"
         android:fontFamily="@font/quicksand_semibold"
-        android:gravity="center"
+        android:layout_marginTop="20dp"
         android:text="Change password"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/Secondary_green"
-        app:layout_constraintBottom_toTopOf="@+id/cancel"
-        app:layout_constraintEnd_toEndOf="@+id/cancel"
-        app:layout_constraintStart_toStartOf="@+id/cancel"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        android:textColor="@color/white"
+        app:backgroundTint="@color/blue_li"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout"
+        app:layout_constraintTop_toBottomOf="@+id/confirmed_new_pass" />
 
     <Button
         android:id="@+id/cancel"
-        android:layout_width="290dp"
-        android:layout_height="0dp"
-        android:layout_marginEnd="45dp"
-        android:layout_marginBottom="47dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingRight="80dp"
+        android:paddingLeft="80dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/blue_background"
         android:fontFamily="@font/quicksand_semibold"
-        android:gravity="center"
+        android:layout_marginTop="30dp"
         android:text="Cancel"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/Secondary_green"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:textColor="@color/white"
+        app:backgroundTint="@color/blue_li"
+        app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
+        app:layout_constraintStart_toStartOf="@+id/linearLayout"
         app:layout_constraintTop_toBottomOf="@+id/passchange" />
 
 
