--- a/app/src/main/res/layout/activity_homepg.xml
+++ b/app/src/main/res/layout/activity_homepg.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#A5C1FF"
+    android:background="@color/orange"
     tools:context=".MainActivity">
 
     <Button
@@ -14,10 +14,10 @@
         android:background="@drawable/main_button2"
         android:fontFamily="@font/quicksand_bold"
         android:gravity="center"
-
+        android:backgroundTint="@color/green_nu"
         android:text="Shop"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/Secondary_green"
+        android:textColor="@color/dark_blue"
         android:textSize="30dp"
 
         app:layout_constraintBottom_toTopOf="@+id/split"
@@ -33,12 +33,13 @@
         android:layout_height="157dp"
         app:backgroundTint="@null"
         android:background="@drawable/main_button"
+        android:backgroundTint="@color/mustard"
         android:fontFamily="@font/quicksand_bold"
         android:gravity="center"
         android:text="Split"
         android:layout_marginBottom="80dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-        android:textColor="@color/Secondary_green"
+        android:textColor="@color/dark_blue"
         android:textSize="30dp"
         android:elevation="20dp"
         app:layout_constraintBottom_toTopOf="@+id/Bottom_Layout"
@@ -52,8 +53,11 @@
         android:background="@drawable/shape_login_panel"
         android:orientation="horizontal"
         android:layout_marginBottom="15dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:paddingLeft="25dp"
         android:paddingRight="25dp"
+        android:backgroundTint="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -68,7 +72,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
-            app:tint="@color/Secondary_green"
+            app:tint="@color/blue_nu"
             app:srcCompat="@drawable/home"
             android:elevation="10dp"
 
@@ -84,7 +88,7 @@
             android:layout_marginBottom="16dp"
             android:elevation="10dp"
             android:layout_toEndOf="@+id/icon1"
-            app:tint="@color/Secondary_green"
+            app:tint="@color/blue_nu"
             app:srcCompat="@drawable/notes" />
         <ImageView
             android:id="@+id/icon3"
@@ -94,7 +98,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
-            app:tint="@color/Secondary_green"
+            app:tint="@color/blue_nu"
             android:layout_toEndOf="@+id/icon2"
             app:srcCompat="@drawable/bill"
             android:elevation="10dp"
@@ -107,7 +111,7 @@
             android:layout_marginTop="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
-            app:tint="@color/Secondary_green"
+            app:tint="@color/blue_nu"
             android:layout_toEndOf="@+id/icon3"
             app:srcCompat="@drawable/settings"
             android:elevation="10dp"
@@ -120,11 +124,12 @@
         android:id="@+id/Top_Layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
         android:layout_marginTop="20dp"
         android:paddingLeft="50dp"
         android:paddingRight="50dp"
         android:background="@drawable/shape_login_panel"
-        android:backgroundTint="@null"
+        android:backgroundTint="@color/white"
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -141,7 +146,7 @@
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
             android:layout_centerHorizontal="true"
-            app:tint="@color/Secondary_green"
+            app:tint="@color/blue_nu"
             app:srcCompat="@drawable/logoresize" />
 
     </RelativeLayout>
