--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,12 +24,12 @@
 
         <TextView
             android:id="@+id/forgotPassword"
-            android:layout_width="120dp"
-            android:layout_height="32dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginStart="194dp"
+            android:layout_marginStart="180dp"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="232dp"
             android:fontFamily="@font/quicksand_semibold"
