--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -4,45 +4,50 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primary_green"
+    android:background="@color/mustard"
     tools:context=".MainActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout2"
         android:layout_width="338dp"
         android:layout_height="455dp"
-        android:layout_marginBottom="64dp"
+        android:layout_marginBottom="150dp"
         android:background="@drawable/shape_login_panel"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="parent"
+        android:backgroundTint="@color/white"
         >
 
 
-        <ImageView
-            android:id="@+id/eye"
 
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_alignParentStart="false"
-            android:layout_alignParentEnd="false"
-            android:layout_alignParentBottom="false"
-            android:layout_marginTop="295dp"
-            android:layout_marginLeft="26dp"
-            android:src="@drawable/invisible" />
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/eye"
+
+        android:layout_width="35dp"
+        android:layout_height="35dp"
+        android:layout_toEndOf="@+id/confirmPass"
+        android:layout_marginTop="14dp"
+        android:layout_marginRight="20dp"
+        android:src="@drawable/invisible"
+        app:layout_constraintBottom_toBottomOf="@+id/confirmPass"
+        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
+        app:layout_constraintStart_toEndOf="@+id/confirmPass"
+        app:layout_constraintTop_toBottomOf="@+id/password"
+        app:tint="@color/blue_nu" />
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:fontFamily="@font/quicksand_bold"
-        android:textSize="50dp"
+        android:textSize="60dp"
         android:text="Register"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textColor="@color/Secondary_green"
+        android:textColor="@color/blue_nu"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -56,11 +61,12 @@
         android:autofillHints=""
         android:textSize="14dp"
         android:layout_marginTop="60dp"
-        android:fontFamily="@font/quicksand_medium"
-        android:textColor="@color/Secondary_green"
+        android:fontFamily="@font/quicksand_semibold"
+        android:textColor="@color/dark_blue"
+        android:textColorHint="@color/blue_nu"
+        android:backgroundTint="@color/blue_li"
         android:hint="Name"
         android:inputType="text"
-        android:textColorHint="@color/primary_green"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
         app:layout_constraintStart_toStartOf="@+id/linearLayout2"
         app:layout_constraintTop_toTopOf="@+id/linearLayout2"
@@ -74,11 +80,12 @@
         android:autofillHints=""
         android:textSize="14dp"
         android:layout_marginTop="14dp"
-        android:fontFamily="@font/quicksand_medium"
-        android:textColor="@color/Secondary_green"
+        android:fontFamily="@font/quicksand_semibold"
         android:hint="Email"
         android:inputType="textEmailAddress"
-        android:textColorHint="@color/primary_green"
+        android:textColor="@color/dark_blue"
+        android:textColorHint="@color/blue_nu"
+        android:backgroundTint="@color/blue_li"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
         app:layout_constraintStart_toStartOf="@+id/linearLayout2"
         app:layout_constraintTop_toBottomOf="@+id/username" />
@@ -90,11 +97,12 @@
         android:autofillHints=""
         android:textSize="14dp"
         android:layout_marginTop="14dp"
-        android:fontFamily="@font/quicksand_medium"
+        android:fontFamily="@font/quicksand_semibold"
         android:hint="Password"
         android:inputType="textPassword"
-        android:textColor="@color/Secondary_green"
-        android:textColorHint="@color/primary_green"
+        android:textColor="@color/dark_blue"
+        android:textColorHint="@color/blue_nu"
+        android:backgroundTint="@color/blue_li"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
         app:layout_constraintStart_toStartOf="@+id/linearLayout2"
         app:layout_constraintTop_toBottomOf="@+id/emailAddress" />
@@ -102,38 +110,34 @@
 
     <EditText
         android:id="@+id/confirmPass"
-        android:layout_width="290dp"
+        android:layout_width="250dp"
         android:layout_height="48dp"
         android:autofillHints=""
-        android:textSize="14dp"
         android:layout_marginTop="14dp"
-        android:fontFamily="@font/quicksand_medium"
-        android:textColor="@color/Secondary_green"
+        android:layout_marginLeft="24dp"
+        android:backgroundTint="@color/blue_li"
+        android:fontFamily="@font/quicksand_semibold"
         android:hint="Confirm Password"
         android:inputType="textPassword"
-        android:textColorHint="@color/primary_green"
-        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
+        android:textColor="@color/dark_blue"
+        android:textColorHint="@color/blue_nu"
+        android:textSize="14dp"
         app:layout_constraintStart_toStartOf="@+id/linearLayout2"
         app:layout_constraintTop_toBottomOf="@+id/password" />
 
     <TextView
         android:id="@+id/registerButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingLeft="80dp"
-        android:paddingRight="80dp"
-        android:paddingBottom="10dp"
-        android:paddingTop="10dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="60dp"
+        android:layout_width="290dp"
+        android:layout_height="42dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/rounded_corner"
         android:fontFamily="@font/quicksand_semibold"
-        android:textSize="20dp"
         android:gravity="center"
         android:text="Register"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/white"
-
+        android:textSize="20dp"
+        app:backgroundTint="@color/orange"
         app:elevation="10dp"
         app:layout_constraintBottom_toBottomOf="@+id/linearLayout2"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
