--- a/app/src/main/res/layout/activity_changepassword.xml
+++ b/app/src/main/res/layout/activity_changepassword.xml
@@ -101,12 +101,8 @@
 
     <Button
         android:id="@+id/passchange"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:paddingRight="40dp"
-        android:paddingLeft="40dp"
+        android:layout_width="290dp"
+        android:layout_height="44dp"
         android:layout_above="@+id/cancel"
         android:background="@drawable/blue_background"
         android:fontFamily="@font/quicksand_semibold"
@@ -115,23 +111,21 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/white"
         app:backgroundTint="@color/blue_li"
+        android:elevation="10dp"
         app:layout_constraintEnd_toEndOf="@+id/linearLayout"
         app:layout_constraintStart_toStartOf="@+id/linearLayout"
         app:layout_constraintTop_toBottomOf="@+id/confirmed_new_pass" />
 
     <Button
         android:id="@+id/cancel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:paddingRight="80dp"
-        android:paddingLeft="80dp"
+        android:layout_width="290dp"
+        android:layout_height="42dp"
         android:layout_marginBottom="30dp"
         android:background="@drawable/blue_background"
         android:fontFamily="@font/quicksand_semibold"
         android:layout_marginTop="30dp"
         android:text="Cancel"
+        android:elevation="10dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textColor="@color/white"
         app:backgroundTint="@color/blue_li"
