--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primary_green"
+    android:background="@color/orange"
     tools:context=".MainActivity">
 
 
@@ -17,7 +17,9 @@
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        android:backgroundTint="@color/white"
+        >
 
 
         <EditText
@@ -31,11 +33,13 @@
             android:layout_marginTop="80dp"
             android:layout_marginEnd="19dp"
             android:autofillHints=""
-            android:fontFamily="@font/quicksand_medium"
-            android:textColor="@color/Secondary_green"
+            android:fontFamily="@font/quicksand_semibold"
+            android:textColor="@color/dark_blue"
+            android:textColorHint="@color/orange"
+            android:backgroundTint="@color/orange"
             android:hint="Email"
             android:inputType="textEmailAddress"
-            android:textColorHint="@color/primary_green"
+
             android:textSize="14dp" />
 
         <TextView
@@ -55,8 +59,9 @@
             android:fontFamily="@font/quicksand_semibold"
             android:gravity="center"
             android:text="Send email"
+            app:backgroundTint="@color/orange"
             android:textAppearance="@style/TextAppearance.AppCompat.Medium"
-            android:textColor="@color/Secondary_green"
+            android:textColor="@color/white"
             app:elevation="10dp"
             />
 
@@ -72,7 +77,7 @@
         android:gravity="center"
         android:text="Reset Password"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        android:textColor="@color/Secondary_green"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@+id/linearLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
